--- a/app/build.gradle
+++ b/app/build.gradle
@@ -49,6 +49,8 @@ dependencies {
     //Glide
     implementation 'com.github.bumptech.glide:glide:4.8.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.8.0'
+    //RecyclerView
+    implementation 'com.android.support:recyclerview-v7:27.0.3'
 }
 //FireBase
 apply plugin: 'com.google.gms.google-services'
