finished autocomplete places

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -51,6 +51,8 @@ dependencies {
     annotationProcessor 'com.github.bumptech.glide:compiler:4.8.0'
     //RecyclerView
     implementation 'com.android.support:recyclerview-v7:27.0.3'
+    //Places
+    implementation 'com.google.android.gms:play-services-places:16.0.0'
 }
 //FireBase
 apply plugin: 'com.google.gms.google-services'
