--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,7 +2,7 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 26
+    compileSdkVersion 27
     defaultConfig {
         applicationId "nicail.bscs.com.emercify"
         minSdkVersion 18
@@ -24,7 +24,7 @@ android {
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
     //noinspection GradleCompatible
-    implementation 'com.android.support:appcompat-v7:27.0.3'
+    implementation 'com.android.support:appcompat-v7:27.1.1'
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
@@ -43,16 +43,21 @@ dependencies {
     implementation 'com.google.firebase:firebase-auth:16.0.5'
     implementation 'com.google.firebase:firebase-database:16.0.5'
     implementation 'com.google.firebase:firebase-storage:16.0.5'
+    //Location
     implementation 'com.google.android.gms:play-services-location:16.0.0'
+    //Maps
     implementation 'com.google.android.gms:play-services-maps:16.0.0'
     implementation 'com.google.maps.android:android-maps-utils:0.5+'
     //Glide
     implementation 'com.github.bumptech.glide:glide:4.8.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.8.0'
     //RecyclerView
-    implementation 'com.android.support:recyclerview-v7:27.0.3'
+    implementation 'com.android.support:recyclerview-v7:27.1.1f'
     //Places
     implementation 'com.google.android.gms:play-services-places:16.0.0'
+    //Directions
+    implementation 'com.google.maps:google-maps-services:0.9.1'
+    implementation 'org.slf4j:slf4j-simple:1.7.25'
 }
 //FireBase
 apply plugin: 'com.google.gms.google-services'
