--- a/app/build.gradle
+++ b/app/build.gradle
@@ -58,6 +58,7 @@ dependencies {
     //Directions
     implementation 'com.google.maps:google-maps-services:0.9.1'
     implementation 'org.slf4j:slf4j-simple:1.7.25'
+    //PhotoView
     implementation 'com.github.chrisbanes:PhotoView:2.1.3'
 }
 //FireBase
