--- a/app/build.gradle
+++ b/app/build.gradle
@@ -52,7 +52,7 @@ dependencies {
     implementation 'com.github.bumptech.glide:glide:4.8.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.8.0'
     //RecyclerView
-    implementation 'com.android.support:recyclerview-v7:27.1.1f'
+    implementation 'com.android.support:recyclerview-v7:27.1.1'
     //Places
     implementation 'com.google.android.gms:play-services-places:16.0.0'
     //Directions
@@ -60,6 +60,10 @@ dependencies {
     implementation 'org.slf4j:slf4j-simple:1.7.25'
     //PhotoView
     implementation 'com.github.chrisbanes:PhotoView:2.1.3'
+    //Google Sign In
+    implementation 'com.google.android.gms:play-services-auth:16.0.1'
+    //Facebook Sign In
+    implementation 'com.facebook.android:facebook-android-sdk:[4,5)'
 }
 //FireBase
 apply plugin: 'com.google.gms.google-services'
