--- a/app/build.gradle
+++ b/app/build.gradle
@@ -60,6 +60,8 @@ dependencies {
     implementation 'org.slf4j:slf4j-simple:1.7.25'
     //PhotoView
     implementation 'com.github.chrisbanes:PhotoView:2.1.3'
+    //Progressbar
+    implementation 'com.wang.avi:library:2.1.3'
 }
 //FireBase
 apply plugin: 'com.google.gms.google-services'
