--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,7 +18,7 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/ic_emercify"
+        android:icon="@mipmap/ic_slash_logo"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_emercify_launcher_round"
         android:supportsRtl="true"
