--- a/app/build.gradle
+++ b/app/build.gradle
@@ -66,6 +66,8 @@ dependencies {
     implementation 'com.google.android.gms:play-services-auth:16.0.1'
     //Facebook Sign In
     implementation 'com.facebook.android:facebook-android-sdk:[4,5)'
+    //Timber
+    implementation 'com.jakewharton.timber:timber:4.7.1'
 }
 //FireBase
 apply plugin: 'com.google.gms.google-services'
