--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,8 +5,9 @@ android {
     compileSdkVersion 27
     defaultConfig {
         applicationId "nicail.bscs.com.emercify"
-        minSdkVersion 18
+        minSdkVersion 21
         targetSdkVersion 27
+        multiDexEnabled true
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
